--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </div>
       <!-- End Col -->
   
-      <div>
+      <div class="text-white">
         <p class="text-xs font-semibold text-gray-900 uppercase dark:text-gray-100">Product</p>
   
         <div class="mt-3 grid space-y-3 text-sm">
