--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				6
 			</div>
 		</section>
-		<footer class="w-full max-w-[85rem] py-10 px-4 sm:px-6 lg:px-8 mx-auto">
+		<footer style="color: #fff" class="w-full max-w-[85rem] py-10 px-4 sm:px-6 lg:px-8 mx-auto">
     <!-- Grid -->
     <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-6 mb-10">
       <div class="col-span-full hidden lg:col-span-1 lg:block">
@@ -92,7 +92,7 @@
       </div>
       <!-- End Col -->
   
-      <div class="text-white">
+      <div>
         <p class="text-xs font-semibold text-gray-900 uppercase dark:text-gray-100">Product</p>
   
         <div class="mt-3 grid space-y-3 text-sm">
