--- a/index.html
+++ b/index.html
@@ -83,68 +83,68 @@
 				6
 			</div>
 		</section>
-		<footer style="color: #fff !important" class="w-full max-w-[85rem] py-10 px-4 sm:px-6 lg:px-8 mx-auto">
+		<footer class="w-full max-w-[85rem] py-10 px-4 sm:px-6 lg:px-8 mx-auto">
     <!-- Grid -->
     <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-6 mb-10">
       <div class="col-span-full hidden lg:col-span-1 lg:block">
         <a class="flex-none text-xl font-semibold dark:text-white" href="#" aria-label="ASTRO HOTELS">ASTRO HOTELS</a>
-        <p class="mt-3 text-xs sm:text-sm text-gray-600 dark:text-gray-400">© 2023 Astro Hotels.</p>
+        <p class="mt-3 text-xs sm:text-sm text-gray-300 dark:text-gray-400">© 2023 Astro Hotels.</p>
       </div>
       <!-- End Col -->
   
       <div>
-        <p class="text-xs font-semibold text-gray-900 uppercase dark:text-gray-100">Product</p>
+        <p class="text-xs font-semibold text-gray-400 uppercase dark:text-gray-100">Product</p>
   
         <div class="mt-3 grid space-y-3 text-sm">
-          <p><a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-100 dark:text-gray-400 dark:hover:text-gray-200" href="#">Pricing</a></p>
-          <p><a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-100 dark:text-gray-400 dark:hover:text-gray-200" href="#">Changelog</a></p>
-          <p><a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-100 dark:text-gray-400 dark:hover:text-gray-200" href="#">Docs</a></p>
-          <p><a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-100 dark:text-gray-400 dark:hover:text-gray-200" href="#">Download</a></p>
+          <p><a class="inline-flex gap-x-2 text-gray-300 hover:text-gray-100 dark:text-gray-400 dark:hover:text-gray-200" href="#">Pricing</a></p>
+          <p><a class="inline-flex gap-x-2 text-gray-300 hover:text-gray-100 dark:text-gray-400 dark:hover:text-gray-200" href="#">Changelog</a></p>
+          <p><a class="inline-flex gap-x-2 text-gray-300 hover:text-gray-100 dark:text-gray-400 dark:hover:text-gray-200" href="#">Docs</a></p>
+          <p><a class="inline-flex gap-x-2 text-gray-300 hover:text-gray-100 dark:text-gray-400 dark:hover:text-gray-200" href="#">Download</a></p>
         </div>
       </div>
       <!-- End Col -->
   
       <div>
-        <p class="text-xs font-semibold text-gray-900 uppercase dark:text-gray-100">Company</p>
+        <p class="text-xs font-semibold text-gray-400 uppercase dark:text-gray-100">Company</p>
   
         <div class="mt-3 grid space-y-3 text-sm">
-          <p><a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">About us</a></p>
-          <p><a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">Blog</a></p>
-          <p><a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">Careers</a> <span class="inline text-blue-300 dark:text-blue-400">— We're hiring</span></p>
-          <p><a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">Customers</a></p>
-          <p><a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">Newsroom</a></p>
-          <p><a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">Sitemap</a></p>
+          <p><a class="inline-flex gap-x-2 text-gray-300 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">About us</a></p>
+          <p><a class="inline-flex gap-x-2 text-gray-300 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">Blog</a></p>
+          <p><a class="inline-flex gap-x-2 text-gray-300 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">Careers</a> <span class="inline text-blue-300 dark:text-blue-400">— We're hiring</span></p>
+          <p><a class="inline-flex gap-x-2 text-gray-300 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">Customers</a></p>
+          <p><a class="inline-flex gap-x-2 text-gray-300 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">Newsroom</a></p>
+          <p><a class="inline-flex gap-x-2 text-gray-300 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">Sitemap</a></p>
         </div>
       </div>
       <!-- End Col -->
   
       <div>
-        <p class="text-xs font-semibold text-gray-900 uppercase dark:text-gray-100">Resources</p>
+        <p class="text-xs font-semibold text-gray-400 uppercase dark:text-gray-100">Resources</p>
   
         <div class="mt-3 grid space-y-3 text-sm">
-          <p><a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">Community</a></p>
-          <p><a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">Help & Support</a></p>
-          <p><a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">eBook</a></p>
-          <p><a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">What's New</a></p>
-          <p><a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">Status</a></p>
+          <p><a class="inline-flex gap-x-2 text-gray-300 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">Community</a></p>
+          <p><a class="inline-flex gap-x-2 text-gray-300 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">Help & Support</a></p>
+          <p><a class="inline-flex gap-x-2 text-gray-300 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">eBook</a></p>
+          <p><a class="inline-flex gap-x-2 text-gray-300 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">What's New</a></p>
+          <p><a class="inline-flex gap-x-2 text-gray-300 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">Status</a></p>
         </div>
       </div>
       <!-- End Col -->
   
       <div>
-        <p class="text-xs font-semibold text-gray-900 uppercase dark:text-gray-100">Developers</p>
+        <p class="text-xs font-semibold text-gray-400 uppercase dark:text-gray-100">Developers</p>
   
         <div class="mt-3 grid space-y-3 text-sm">
-          <p><a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">Api</a></p>
-          <p><a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">Status</a></p>
-          <p><a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">GitHub</a> <span class="inline text-blue-300 dark:text-blue-400">— New</span></p>
+          <p><a class="inline-flex gap-x-2 text-gray-300 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">Api</a></p>
+          <p><a class="inline-flex gap-x-2 text-gray-300 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">Status</a></p>
+          <p><a class="inline-flex gap-x-2 text-gray-300 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">GitHub</a> <span class="inline text-blue-300 dark:text-blue-400">— New</span></p>
         </div>
   
-        <p class="mt-7 text-xs font-semibold text-gray-900 uppercase dark:text-gray-100">Industries</p>
+        <p class="mt-7 text-xs font-semibold text-gray-400 uppercase dark:text-gray-100">Industries</p>
   
         <div class="mt-3 grid space-y-3 text-sm">
-          <p><a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">Financial Services</a></p>
-          <p><a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">Education</a></p>
+          <p><a class="inline-flex gap-x-2 text-gray-300 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">Financial Services</a></p>
+          <p><a class="inline-flex gap-x-2 text-gray-300 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">Education</a></p>
         </div>
       </div>
       <!-- End Col -->
@@ -168,7 +168,7 @@
                 </g>
               </svg>
               English (US)
-              <svg class="hs-dropdown-open:rotate-180 w-2.5 h-2.5 text-gray-600" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg class="hs-dropdown-open:rotate-180 w-2.5 h-2.5 text-gray-300" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M2 11L8.16086 5.31305C8.35239 5.13625 8.64761 5.13625 8.83914 5.31305L15 11" stroke="currentColor" stroke-width="2" stroke-linecap="round"></path>
               </svg>
             </button>
@@ -232,16 +232,16 @@
           <!-- End Language Dropdown -->
   
           <div class="space-x-4 text-sm ml-4">
-            <a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">Terms</a>
-            <a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">Privacy</a>
-            <a class="inline-flex gap-x-2 text-gray-600 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">Status</a>
+            <a class="inline-flex gap-x-2 text-gray-300 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">Terms</a>
+            <a class="inline-flex gap-x-2 text-gray-300 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">Privacy</a>
+            <a class="inline-flex gap-x-2 text-gray-300 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200" href="#">Status</a>
           </div>
         </div>
   
         <div class="flex justify-between items-center">
           <div class="mt-3 sm:hidden">
             <a class="flex-none text-xl font-semibold dark:text-white" href="#" aria-label="ASTRO HOTELS">ASTRO HOTELS</a>
-            <p class="mt-1 text-xs sm:text-sm text-gray-600 dark:text-gray-400">© 2023 Astro Hotels.</p>
+            <p class="mt-1 text-xs sm:text-sm text-gray-300 dark:text-gray-400">© 2023 Astro Hotels.</p>
           </div>
   
           <!-- Social Brands -->
