--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 	<body class="text-gray-100 2xl:text[20px] bg-[#282828]">
     <div id="q-app">
       <h1>{{asd}}</h1>
-    </div>
+	<div class="q-ma-md">
+    	<q-btn label="Notify" color="primary" @click="notify"></q-btn>
+    	</div>
 		<nav class="
     grid
     content-between
